--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -74,10 +74,10 @@
       "execution_count": 6,
       "metadata": {
         "id": "wOJqxG_RPSwp",
-        "outputId": "70468b65-d0d6-4218-dd4a-f1a942ea9e0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "70468b65-d0d6-4218-dd4a-f1a942ea9e0b"
       },
       "outputs": [
         {
@@ -140,10 +140,10 @@
       "execution_count": 10,
       "metadata": {
         "id": "L6fkwOeOmqvq",
-        "outputId": "37086ef4-3081-496f-b2bf-7ae33054b942",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "37086ef4-3081-496f-b2bf-7ae33054b942"
       },
       "outputs": [
         {
@@ -173,7 +173,7 @@
         "ORDER BY YEAR DESC\n",
         "\"\"\"\n",
         "\n",
-        "spark.sql(query1).show()\n"
+        "spark.sql(query1).show()"
       ]
     },
     {
@@ -181,10 +181,10 @@
       "execution_count": 16,
       "metadata": {
         "id": "l8p_tUS8h8it",
-        "outputId": "7afe6373-bc14-412c-c8a2-96d807620740",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7afe6373-bc14-412c-c8a2-96d807620740"
       },
       "outputs": [
         {
@@ -219,40 +219,101 @@
         "ORDER BY YEAR DESC\n",
         "\"\"\"\n",
         "\n",
-        "\n",
         "spark.sql(query2).show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "Y-Eytz64liDU"
+        "id": "Y-Eytz64liDU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cab3f290-6d03-4267-ebc8-7919d04f36cd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-------------+\n",
+            "|YEAR|AVERAGE_PRICE|\n",
+            "+----+-------------+\n",
+            "|2017|    280317.58|\n",
+            "|2016|     293965.1|\n",
+            "|2015|    297609.97|\n",
+            "|2014|    298264.72|\n",
+            "|2013|    303676.79|\n",
+            "|2012|    307539.97|\n",
+            "|2011|    276553.81|\n",
+            "|2010|    285010.22|\n",
+            "+----+-------------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# 5. What is the average price of a home for each year the home was built,\n",
         "# that have 3 bedrooms, 3 bathrooms, with two floors,\n",
         "# and are greater than or equal to 2,000 square feet, rounded to two decimal places?\n",
-        "\n"
+        "\n",
+        "query3 = \"\"\"\n",
+        "\n",
+        "SELECT date_built AS YEAR,\n",
+        "ROUND(AVG(price),2) AS AVERAGE_PRICE\n",
+        "FROM home_sales\n",
+        "WHERE bedrooms = 3 AND bathrooms = 3 AND floors = 2 AND sqft_living >= 2000\n",
+        "GROUP BY YEAR\n",
+        "ORDER BY YEAR desc\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "spark.sql(query3).show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "0a645986-7179-440c-c0bc-345f1693f8af"
+        "outputId": "248720bf-5097-4296-c58f-dad334a6cc50"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--- 7.200241088867188e-05 seconds ---\n"
+            "+----+-------------+\n",
+            "|view|AVERAGE_PRICE|\n",
+            "+----+-------------+\n",
+            "|  85|   1056336.74|\n",
+            "|  65|    736679.93|\n",
+            "|  53|     755214.8|\n",
+            "|  78|   1080649.37|\n",
+            "|  81|   1053472.79|\n",
+            "|  76|   1058802.78|\n",
+            "|  91|   1137372.73|\n",
+            "|  93|   1026006.06|\n",
+            "|  52|    733780.26|\n",
+            "|  86|   1070444.25|\n",
+            "|  94|    1033536.2|\n",
+            "|  57|     734340.5|\n",
+            "|  54|    798684.82|\n",
+            "|  96|   1017815.92|\n",
+            "|  92|    970402.55|\n",
+            "|  64|    767036.67|\n",
+            "|  61|    746877.59|\n",
+            "|  88|   1031719.35|\n",
+            "|  72|    780914.67|\n",
+            "|  59|     791453.0|\n",
+            "+----+-------------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "--- 0.6891844272613525 seconds ---\n"
           ]
         }
       ],
@@ -263,50 +324,107 @@
         "\n",
         "start_time = time.time()\n",
         "\n",
-        "\n",
+        "spark.sql(\"\"\"SELECT view, ROUND(AVG(price),2) AS AVERAGE_PRICE FROM home_sales GROUP BY view having AVERAGE_PRICE >= 350000\"\"\").show()\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "KAhk3ZD2tFy8"
+        "id": "KAhk3ZD2tFy8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a4f8791-4233-42e3-eae0-a38806ab8fbd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ],
       "source": [
-        "# 7. Cache the the temporary table home_sales.\n"
+        "# 7. Cache the the temporary table home_sales.\n",
+        "spark.sql(\"cache table home_sales\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
-        "id": "4opVhbvxtL-i"
+        "id": "4opVhbvxtL-i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "681c4846-0bb3-40f3-e7d3-c63dfa1d329c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ],
       "source": [
         "# 8. Check if the table is cached.\n",
-        "spark.catalog.isCached('home_sales')"
+        "spark.catalog.isCached(\"home_sales\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "63c7dc50-d96a-4a48-97b6-91a446cdb973"
+        "outputId": "dae10490-923b-4eb8-b91e-fd086f923425"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--- 5.459785461425781e-05 seconds ---\n"
+            "+----+-------------+\n",
+            "|view|AVERAGE_PRICE|\n",
+            "+----+-------------+\n",
+            "|  85|   1056336.74|\n",
+            "|  65|    736679.93|\n",
+            "|  53|     755214.8|\n",
+            "|  78|   1080649.37|\n",
+            "|  81|   1053472.79|\n",
+            "|  76|   1058802.78|\n",
+            "|  91|   1137372.73|\n",
+            "|  93|   1026006.06|\n",
+            "|  52|    733780.26|\n",
+            "|  86|   1070444.25|\n",
+            "|  94|    1033536.2|\n",
+            "|  57|     734340.5|\n",
+            "|  54|    798684.82|\n",
+            "|  96|   1017815.92|\n",
+            "|  92|    970402.55|\n",
+            "|  64|    767036.67|\n",
+            "|  61|    746877.59|\n",
+            "|  88|   1031719.35|\n",
+            "|  72|    780914.67|\n",
+            "|  59|     791453.0|\n",
+            "+----+-------------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "--- 0.5110452175140381 seconds ---\n"
           ]
         }
       ],
@@ -318,60 +436,89 @@
         "\n",
         "start_time = time.time()\n",
         "\n",
-        "\n",
+        "spark.sql(\"SELECT view, ROUND(AVG(price),2) AS AVERAGE_PRICE FROM home_sales GROUP BY view having AVERAGE_PRICE >= 350000\").show()\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "Qm12WN9isHBR"
       },
       "outputs": [],
       "source": [
-        "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data\n"
+        "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data\n",
+        "df.write.partitionBy(\"date_built\").mode('overwrite').parquet(\"home_sales_partitioned\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
       "outputs": [],
       "source": [
-        "# 11. Read the parquet formatted data.\n"
+        "# 11. Read the parquet formatted data.\n",
+        "p_df_p=spark.read.parquet('home_sales_partitioned')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
       "outputs": [],
       "source": [
-        "# 12. Create a temporary table for the parquet data.\n"
+        "# 12. Create a temporary table for the parquet data.\n",
+        "p_df_p.createOrReplaceTempView('p_home_sales_p')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "d6748ea6-d70a-41fd-dcb8-c214a85e949e"
+        "outputId": "95f615c8-f876-45cb-8026-96a718b1cd48"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--- 7.104873657226562e-05 seconds ---\n"
+            "+----+-------------+\n",
+            "|view|AVERAGE_PRICE|\n",
+            "+----+-------------+\n",
+            "| 100|    1026669.5|\n",
+            "|  99|   1061201.42|\n",
+            "|  98|   1053739.33|\n",
+            "|  97|   1129040.15|\n",
+            "|  96|   1017815.92|\n",
+            "|  95|    1054325.6|\n",
+            "|  94|    1033536.2|\n",
+            "|  93|   1026006.06|\n",
+            "|  92|    970402.55|\n",
+            "|  91|   1137372.73|\n",
+            "|  90|   1062654.16|\n",
+            "|  89|   1107839.15|\n",
+            "|  88|   1031719.35|\n",
+            "|  87|    1072285.2|\n",
+            "|  86|   1070444.25|\n",
+            "|  85|   1056336.74|\n",
+            "|  84|   1117233.13|\n",
+            "|  83|   1033965.93|\n",
+            "|  82|    1063498.0|\n",
+            "|  81|   1053472.79|\n",
+            "+----+-------------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "--- 1.3093194961547852 seconds ---\n"
           ]
         }
       ],
@@ -383,32 +530,72 @@
         "\n",
         "start_time = time.time()\n",
         "\n",
-        "\n",
+        "query4 = \"\"\"\n",
+        "SELECT view,\n",
+        "ROUND(AVG(price), 2) AS AVERAGE_PRICE\n",
+        "FROM p_home_sales_p\n",
+        "GROUP BY view\n",
+        "HAVING AVG(price) >= 350000\n",
+        "ORDER BY view desc\n",
+        "\"\"\"\n",
+        "spark.sql(query4).show()\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
-        "id": "hjjYzQGjtbq8"
+        "id": "hjjYzQGjtbq8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a810000-fe7d-47fc-b803-6466c0a193bc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ],
       "source": [
-        "# 14. Uncache the home_sales temporary table.\n"
+        "# 14. Uncache the home_sales temporary table.\n",
+        "spark.sql(\"uncache table home_sales\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
-        "id": "Sy9NBvO7tlmm"
+        "id": "Sy9NBvO7tlmm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a9311561-4e2a-4edf-a19d-cb7266378532"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ],
       "source": [
         "# 15. Check if the home_sales is no longer cached\n",
-        "\n"
+        "\n",
+        "spark.catalog.isCached(\"home_sales\")"
       ]
     },
     {
